# lyrica

./: .gitignore  LICENSE  README.md  credentials.toml.template  lyrica.py  pyproject.toml
resources/prompts/: system.txt  user.txt
src/lyrica/: __init__.py  ai_brain.py  bluesky_transport.py  introspection.py  simple_coordinator.py
